Algunos Code-smells corregidos.