@@ -16,7 +16,7 @@ import edu.ncsu.monopoly.Player;
 
 public class BuyHouseDialog extends JDialog {
 	private JComboBox<String> cboMonopoly; 
-	private JComboBox cboNumber;
+	private JComboBox<Integer> cboNumber;
 
 	private Player player;
 
@@ -49,13 +49,13 @@ public class BuyHouseDialog extends JDialog {
 		return cboMonopoly;
 	}
 	
-	private JComboBox buildNumberComboBox() {
-		cboNumber = new JComboBox(new Integer[]{
-				new Integer(1),
-				new Integer(2),
-				new Integer(3),
-				new Integer(4),
-				new Integer(5)});
+	private JComboBox<Integer> buildNumberComboBox() {
+		cboNumber = new JComboBox<>(new Integer[]{
+				Integer.valueOf(1),
+				Integer.valueOf(2),
+				Integer.valueOf(3),
+				Integer.valueOf(4),
+				Integer.valueOf(5)});
 		return cboNumber;
 	}
 
